name:                 xdcc
version:              1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Jan Gerlinger
maintainer:           git@jangerlinger.de
category:             Network
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable xdcc
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:        Irc
                      , Dcc
                      , Dcc.Types
                      , Dcc.Parser
                      , Xdcc
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                      , ascii-progress
                      , binary
                      , bytestring
                      , case-insensitive
                      , concurrent-extra
                      , concurrent-output
                      , containers
                      , errors
                      , filepath
                      , io-streams
                      , iproute
                      , irc-ctcp
                      , network
                      , optparse-applicative
                      , polyparse
                      , random
                      , simpleirc
                      , text
                      , time
                      , transformers
                      , unix
  default-language:     Haskell2010

test-suite xdcc-unit-tests
  hs-source-dirs:       src
  type:                 exitcode-stdio-1.0
  main-is:              Test.hs
  other-modules:        Irc
                      , Dcc
                      , Dcc.Types
                      , Dcc.Parser
  build-depends:        base >= 4.7 && < 5
                      , binary
                      , bytestring
                      , case-insensitive
                      , concurrent-extra
                      , errors
                      , filepath
                      , io-streams
                      , iproute
                      , irc-ctcp
                      , network
                      , polyparse
                      , simpleirc
                      , transformers
                      , unix
                      , QuickCheck
  default-language:     Haskell2010
