name:                 xdcc
version:              1.0.0
synopsis:             An XDCC file downloader
description:          Download files from IRC XDCC channels
license:              MIT
license-file:         LICENSE
homepage:             https://github.com/JanGe/xdcc
bug-reports:          https://github.com/JanGe/xdcc/issues
author:               Jan Gerlinger
maintainer:           git@jangerlinger.de
category:             Network
-- copyright:
build-type:           Simple
cabal-version:        >=1.10

executable xdcc
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:        Irc
                      , Dcc
                      , Xdcc
  build-depends:        base >= 4.7 && < 5
                      , ascii-progress
                      , bytestring
                      , case-insensitive
                      , concurrent-extra
                      , concurrent-output
                      , errors
                      , iproute
                      , irc-ctcp
                      , irc-dcc >= 1.0.0
                      , network
                      , optparse-applicative
                      , path
                      , random
                      , simpleirc
                      , transformers
                      , unix
  default-language:     Haskell2010
  ghc-options:          -Wall
